src/snapshots/ruff__linter__tests__D212_D.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: MultiLineSummaryFirstLine
  location:
    row: 129
    column: 4
  end_location:
    row: 131
    column: 7
  fix: ~

